<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PaintingFinger</string>
    <string name="size">Size</string>
    <item name="myFingerPainterViewId" type="id" />
    <string name="title_activity_brush_size_view">Settings</string>
    <string name="shape">Shape</string>
    <string name="finger_painter">Finger Painter</string>
    <string name="colour_hexa">colour_hexa</string>
    <string name="colour">colour</string>
    <string name="set_colour">Set Colour</string>
    <string name="set_shape">Set Shape</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="violet">VIOLET</string>
    <string name="black">BLACK</string>
    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="confirm">Confirm</string>
    <string name="round">ROUND</string>
    <string name="square">SQUARE</string>
    <string name="_0_150">0–150</string>
    <string name="reset">Reset</string>
    ``
    <string-array name="colour_dropdown">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Indigo</item>
        <item>Violet</item>
    </string-array>
</resources>
