<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/shape_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/set_shape"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/round" />

            <Button
                android:id="@+id/square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/square" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/shape_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/shape_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />
</LinearLayout>